# kings-and-cadence

./: .gitignore  CMakeLists.txt
app/: board_canvas.py  engine_worker.py  graveyard.py  main_ui.py
include/: bitboard.hpp  capabilities.hpp  eval.hpp  geometry.hpp  move.hpp  movegen.hpp  perft.hpp  search.hpp  state.hpp  tt.hpp  types.hpp  xfen.hpp  zobrist.hpp
src/: main.cpp  module.cpp
